--- a/style.css
+++ b/style.css
@@ -65,12 +65,7 @@ p{
   padding: 10px;
   list-style: none;
   margin: 0;
-
-  /* Sticky magic */
-  position: sticky;
-  top: 0; /* Stick to the top of the viewport */
   background-color: var(--background-color);
-  z-index: 1000; /* Ensure it stays above other content */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional */
 }
 
@@ -129,22 +124,38 @@ p{
   border-radius: 10px;
 }
 
-/* Project Details Styles */
-.project-meta {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 2rem;
+/* PROJECT PAGES */
+
+/*Back to Portfolio*/
+.project .return-button a {
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.return-button a:hover {
+  opacity: 0.8;
+}
+
+.project h1 {
+  margin-top: 1rem;
+  padding-top: 1rem;
+}
+
+.project  .project-meta {
+  display: flex;
+  flex-direction: column;          /* Stack children vertically */
+  gap: 2rem;                       /* Spacing between rows */
   margin: 2rem 0;
 }
 
-.meta-item {
+.project .meta-item {
   background: var(--background-color);
   border: 2px solid var(--accent-color);
   border-radius: 15px;
   padding: 1.5rem;
 }
 
-.main-preview {
+.project .main-preview {
   width: 100%;
   max-height: 500px;
   object-fit: contain;
@@ -152,19 +163,19 @@ p{
   border-radius: 15px;
 }
 
-.project-description {
+.project .project-description {
   margin: 3rem 0;
   line-height: 1.6;
 }
 
-.gallery-grid {
+.project .gallery-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1.5rem;
   margin-top: 1.5rem;
 }
 
-.gallery-item {
+.project .gallery-item {
   width: 100%;
   height: 250px;
   object-fit: cover;
@@ -172,7 +183,7 @@ p{
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.tool-category {
+.project .tool-category {
   margin: 2rem 0;
   padding: 1.5rem;
   background: var(--background-color);
@@ -180,7 +191,7 @@ p{
   border-radius: 15px;
 }
 
-.tool-category ul {
+.project .tool-category ul {
   list-style: none;
   padding: 0;
   display: flex;
@@ -188,7 +199,7 @@ p{
   gap: 0.5rem;
 }
 
-.tool-category li {
+.project .tool-category li {
   background: var(--accent-color);
   color: var(--background-color);
   padding: 0.5rem 1rem;
