--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
 }
 
 .hero h1 {
-  color:var(--accent-color);
-  font-size: clamp(2rem, 20vw, 8rem); /* Min: 2rem, Max: 8rem */
+  color: var(--accent-color);
+  font-size: var(--title-size);
   text-align: justify;
   margin: 0;
   font-weight: bold;
@@ -37,6 +37,7 @@ body {
 
 .hero p{
   color: var(--secondary-color);
+  font-size: var(--subtitle-size);
 }
 
 /* buttons */
@@ -78,7 +79,7 @@ body {
   padding: 10px 15px;
   margin: 0 15px;
   cursor: pointer;
-  font-size: 1em;
+  font-size: var(--regular-text-size);
   transition: all 0.3s ease;
   flex-shrink: 0;
 }
@@ -117,6 +118,12 @@ body {
 .project-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+.project-card h3 {
+  font-size: var(--Heading-3-size);
+  border-bottom: 2px solid var(--text-color);
+  display: inline-block; /* necesario para que el border se ajuste al texto */
 }
 
 .project-card img {
