--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
   padding: 10px 15px;
   margin: 0 15px;
   cursor: pointer;
-  font-size: var(--regular-text-size);
+  font-size: var(--button-text-size);
   transition: all 0.3s ease;
   flex-shrink: 0;
 }
