--- a/project-style.css
+++ b/project-style.css
@@ -16,6 +16,7 @@
 .project h1{
   font-size: var(--Heading-1-size);
   text-align: center;
+  margin-bottom: var(--spacing-large);
 }
 
 .project h2{
@@ -38,19 +39,20 @@
   width: 100%;
   max-height: 500px;
   object-fit: contain;
-  margin: 2rem 0;
+  margin-bottom: var(--spacing-large);
   border-radius: 15px;
 }
 
 /* Description*/
 .project .project-description {
-  margin: 2rem 0;
+  text-align: justify;
+  margin-bottom: var(--spacing-large);
   line-height: 1.6;
 }
 
 /* Role, Tema, Period */
 .project  .project-meta {
-  margin: 2rem 0;
+  margin-bottom: var(--spacing-large);
   line-height: 1.6;
 }
 
@@ -61,11 +63,11 @@
 
 /* Tools */
 .project .project-tools{
-  margin: 3rem 0;
+  margin-bottom: var(--spacing-large);
 }
 
 .project .tool-category {
-  margin: 1rem 0;
+  margin-bottom: var(--spacing-small);
   padding: 1.5rem;
   background: var(--background-color);
   border: 2px solid var(--accent-color);
@@ -88,11 +90,13 @@
   font-size: 0.9em;
 }
 
+
+/* Screenshots */
 .project .gallery-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1.5rem;
-  margin-top: 1.5rem;
+  margin-bottom: var(--spacing-large);
 }
 
 .project .gallery-item {
