--- a/variables.css
+++ b/variables.css
@@ -7,8 +7,8 @@
     --text-color: black;
   
     /* Spacing */
-    --spacing-large: 6rem;
-    --spacing-medium: 3rem;
+    --spacing-large: 2rem;
+    --spacing-medium: 1rem;
     --spacing-small: 0.5rem;
 
     /*Text Size*/
@@ -19,6 +19,7 @@
     --Heading-2-size: clamp(1.5rem, 5vw, 2.5rem);
     --Heading-3-size: clamp(1.125rem, 3vw, 1.5rem);
     --button-text-size: clamp(1rem, 2.5vw, 1.25rem);
+    --pill-text-size: clamp(0.8rem, 2vw, 1rem);
     --regular-text-size: clamp(1rem, 2.5vw, 1.25rem);
 
     /* Typography */
