--- a/projects/project-style.css
+++ b/projects/project-style.css
@@ -1,3 +1,6 @@
+/*Imports*/
+@import url('../lightbox/lightbox.css');
+
 /* PROJECT PAGES */
 
 /*Back to Portfolio*/
@@ -45,6 +48,12 @@
   object-fit: contain;
   margin-bottom: var(--spacing-large);
   border-radius: 15px;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.project .main-preview:hover{
+  transform: scale(1.02);
 }
 
 /* Description*/
@@ -110,4 +119,10 @@
   object-fit: cover;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.project .gallery-item:hover{
+  transform: scale(1.02);
 }
