--- a/contact/contact-style.css
+++ b/contact/contact-style.css
@@ -20,6 +20,7 @@
   }
   
   .contact-items {
+    text-align: center;
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -51,10 +52,4 @@
   .contact-card p {
     color: var(--text-color);
     font-size: var(--regular-text-size);
-  }
-  
-  @media (max-width: 768px) {
-    .contact-items {
-      grid-template-columns: 1fr;
-    }
   }
