--- a/contact/contact-style.css
+++ b/contact/contact-style.css
@@ -1,55 +1,47 @@
-/* CONTACT */
-.contact-page {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  .contact-container {
-    max-width: 800px;
-    margin: 2rem auto;
-    padding: 0 1rem;
-    flex: 1;
-  }
-  
-  .contact-title {
-    font-size: var(--Heading-1-size);
-    color: var(--accent-color);
-    text-align: center;
-    margin-bottom: 3rem;
-  }
-  
-  .contact-items {
-    text-align: center;
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  }
-  
-  .contact-card {
-    background: var(--background-color);
-    border: none;
-    border-radius: 15px;
-    padding: 1.5rem;
-    transition: transform 0.3s ease;
-  }
-  
-  .contact-card:hover {
-    transform: translateY(-5px);
-  }
-  
-  .contact-card a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  .contact-card h3 {
-    color: var(--accent-color);
-    margin-bottom: 0.5rem;
-    font-size: var(--Heading-3-size);
-  }
-  
-  .contact-card p {
-    color: var(--text-color);
-    font-size: var(--regular-text-size);
-  }
+@import url('variables.css');
+
+/* Get in Touch */
+.contact-title {
+  font-size: var(--Heading-1-size);
+  color: var(--accent-color);
+  text-align: center;
+  margin-top: var(--spacing-large);
+  margin-bottom: var(--spacing-large);
+}
+
+/* Phone, LinkedIn, Email */
+
+.contact-items {
+  text-align: center;
+  display: grid;
+  gap: var(--spacing-large);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.contact-card {
+  background: var(--background-color);
+  border: none;
+  border-radius: 15px;
+  padding: 1.5rem;
+  transition: transform 0.3s ease;
+}
+
+.contact-card:hover {
+  transform: translateY(-5px);
+}
+
+.contact-card a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.contact-card h3 {
+  color: var(--accent-color);
+  margin-bottom: var(--spacing-small);
+  font-size: var(--Heading-3-size);
+}
+
+.contact-card p {
+  color: var(--text-color);
+  font-size: var(--regular-text-size);
+}
